Updated to use Files and Paths API